<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/menu_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/menu_history"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/menu_theme"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_theme"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/menu_scientific"
        android:title="@string/menu_scientific"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_converter"
        android:title="@string/menu_converter"
        app:showAsAction="never" />
</menu>
